--- a/src/style/style.less
+++ b/src/style/style.less
@@ -1,29 +1,3 @@
-@primary-color: #2d8cf0; //#2d8cf0;#2891e2
-@info-color: #2d8cf0;
-@success-color: #19be6b;
-@warning-color: #ff9900;
-@error-color: #ed3f14;
-@link-color: @primary-color;
-@link-hover-color: tint(@link-color, 60%);
-@link-active-color: shade(@link-color, 10%);
-@tooltip-color: #fff;
-@subsidiary-color: #80848f;
-@rate-star-color: #f5a623; // Base
-@body-background: #fff;
-@font-family: "Microsoft YaHei","微软雅黑",Arial,"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB",sans-serif;
-@code-family: Consolas,Menlo,Courier,monospace;
-@title-color: #1c2438;
-@text-color: #333333;
-@font-size-base: 16px;
-@font-size-small: 14px;
-@cursor-disabled: not-allowed;
-@box-shadow-color: #333333;
-
-@xt-border-color: #ccc;
-@bg-color: #fff;
-@max-width: 1366px;
-@base-width: 1200px;
-
 
 a,
 abbr,
@@ -120,20 +94,22 @@ table {
 body {
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: fade(@primary-color, 10%) !important;
-  //user-select: none;
-  & > .ivu-poptip-popper > .ivu-poptip-content > .ivu-poptip-inner > .ivu-poptip-body > .ivu-icon-help-circled {
-    color: @warning-color;
-  }
-  & > .ivu-poptip-popper > .ivu-poptip-content > .ivu-poptip-inner > .ivu-poptip-body > .ivu-poptip-body-message {
-    display: inline;
-  }
-  & > .ivu-poptip-popper > .ivu-poptip-content > .ivu-poptip-inner > .ivu-poptip-footer {
-    text-align: right;
-    padding: 8px 12px;
-  }
 }
 
 * {
   box-sizing: border-box;
+}
+.button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 4px;
+  border: 0;
+  box-sizing: border-box;
+  color: inherit;
+  display: inline-block;
+  outline: 0;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
 }
