--- a/src/style/style.less
+++ b/src/style/style.less
@@ -95,6 +95,9 @@ body {
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+img {
+  max-width: 100%;
+}
 
 * {
   box-sizing: border-box;
