--- a/src/style/style.less
+++ b/src/style/style.less
@@ -119,3 +119,13 @@ svg {
   position: relative;
   text-align: center;
 }
+
+.send-buttons {
+  p {
+    transition: all .3s ease;
+  }
+  p:hover {
+    background-color: darken(#b69c47, 10%) !important;
+    color: white !important;
+  }
+}
