--- a/src/style/style.less
+++ b/src/style/style.less
@@ -84,7 +84,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  vertical-align: baseline;
+  // vertical-align: baseline;
 }
 
 table {
