--- a/src/style/style.less
+++ b/src/style/style.less
@@ -92,6 +92,7 @@ table {
 }
 
 body {
+  text-align: center;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -110,7 +111,6 @@ svg {
   -moz-appearance: none;
   appearance: none;
   border-radius: 4px;
-  border: 0;
   box-sizing: border-box;
   color: inherit;
   display: inline-block;
